# pugsql

./: .flake8  .gitignore  .python-version  .travis.yml  HISTORY.md  LICENSE  README.md  pypi-readme.md  pyproject.toml  test.py  todo.md
.github/workflows/: codeql-analysis.yml  flake8.yaml  poetry-tests.yml  release.yml
docs/: CNAME  _config.yml  index.md  tutorial.md
docs/_data/: pypi.json
docs/_includes/: head.html
docs/_layouts/: default.html
docs/_pdoc/: banner.mako  head.mako  html.mako
docs/_scss/: code.scss  colors.scss  content.scss  header.scss  links.scss  nav.scss  pdoc.scss  rouge.scss  typography.scss  vars.scss
docs/assets/: pdoc.scss  styles.scss
docs/doc/0.1.10/pugsql/: compiler.html  context.html  exceptions.html  index.html  lexer.html  parser.html  statement.html
docs/doc/0.1.11/pugsql/: compiler.html  context.html  exceptions.html  index.html  lexer.html  parser.html  (+1 more)
pugsql/: __init__.py  compiler.py  context.py  exceptions.py  jit.py  lexer.py  parser.py  query.py  statement.py
resources/: favicon.sketch
tests/: test_compiler.py  test_context.py  test_jit.py  test_lexer.py  test_parser.py  test_postgres.py  test_pugsql.py  test_statement.py
tests/data/: fixtures.sql  fixtures.sqlite3
tests/sql/: basic.sql  extra-comments.sql  identifier.sql  multi-statement.sql
tests/sql/duplicate-name/: bar.sql  foo.sql  foo2.sql
tests/sql/errors/: no-name.sql
tests/sql/extra-dashes/: test.sql
tests/sql/fixtures/: delete_by_usernames.sql  find_by_username_or_id.sql  find_by_usernames.sql  find_date.sql  insert_user.sql  search_users.sql  update_username.sql  user_for_id.sql  username_for_id.sql
tests/sql/mod1/: scalar.sql
tests/sql/mod2/: insert.sql
tests/sql/multiline/: doc-multiline.sql  doc.sql  has-commentary-whitespace.sql  has-commentary.sql  insert.sql  long-affected.sql  long-exec-long-affected.sql  long-many.sql  long-one.sql  long-query-default.sql  long-query-long-many.sql  long-query-long-one.sql  long-query-raw.sql  raw.sql  scalar.sql  short-affected.sql  short-exec-short-affected.sql  short-many.sql  short-one.sql  short-query-short-many.sql  short-query-short-one.sql
tests/sql/oneliners/: long-affected.sql  long-exec-long-affected.sql  long-many.sql  long-one.sql  long-query-default.sql  long-query-long-many.sql  long-query-long-one.sql  long-query-raw.sql  long-raw.sql  name-only.sql  short-affected.sql  short-exec-short-affected.sql  short-many.sql  short-one.sql  short-query-short-many.sql
tests/sql/postgres/: get_foo.sql  insert-array.sql  insert-returning-star.sql  insert-returning.sql  multi-upsert.sql  setup.sql  upsert_foo.sql  where-in.sql
tests/sql/reserved/: disconnect.sql
(+171 files in other folders)
