[tool.poetry]
name = "pugsql"
version = "0.2.4"
description = "PugSQL is an anti-ORM that facilitates interacting with databases using SQL in files."
authors = ["Dan McKinley <mcfunley@gmail.com>"]
license = "Apache-2.0"
homepage = "https://pugsql.org"
repository = "https://github.com/mcfunley/pugsql"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Database :: Front-Ends"
]
readme = "pypi-readme.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
sqlalchemy = "2.0.30"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.6.2"
pg8000 = "^1.13"
packaging = "^20.4"
pytest = "^7.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
